--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 </head>
 <body id="gradient">
 	<h1>Background Generator</h1>
-	<h2>This is the Background.</h2>
+	<h2>This is the new Background.</h2>
 	<input class="color1" type="color" name="color1" value="#FF0000">
 	<input class="color2" type="color" name="color2" value="#FFFF00">
 	<h3></h3>
